fix(site:BlogPost): Changes highlighted text color in dark modes

--- a/web/src/components/Common/BlogPost/BlogPost.module.scss
+++ b/web/src/components/Common/BlogPost/BlogPost.module.scss
@@ -128,6 +128,10 @@
   }
 
   .DateWrapper {
+    // color: $color-primary-yellow;
+  }
+
+  .HighlightedText {
     color: $color-primary-yellow;
   }
 
